# Light-Stage-Controller

./: .gitmodules  README.md  download_captures.sh
Arduino Source -listarduino/: listaruno.ino
RPI Source - listpi/c++/src/: Serial.cpp
RPI Source - listpi/python/: listpi.py
arduino-source/: listaruno.ino  monitor.sh  upload.sh
arduino-source/listaruno/: listaruno.ino
c++/: CMakeLists.txt
c++/src/: StepperMotorController.cpp  StepperMotorController.h  listpi.cpp
python/: listpi.py
rpi-source/: .gitmodules
rpi-source/c++/: CMakeLists.txt
rpi-source/c++/src/: CaptureUtility.cpp  CaptureUtility.h  LEDController.cpp  Serial.h  StepperMotorController.cpp  listpi.cpp  listpi.h
rpi-source/c++/src/CaptureUtility/: CaptureUtility.cpp  CaptureUtility.h
rpi-source/c++/src/LEDController/: LEDController.cpp  LEDController.h
rpi-source/c++/src/Serial/: Serial.cpp  Serial.h
rpi-source/capture-test/: CMakeLists.txt
rpi-source/capture-test/src/: captureTest.cpp
